--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,10 @@ name: Build & Release
 
 on:
   push:
-    branches: [main, master]
+    branches: [main]
     tags: ["v*"]
   pull_request:
-    branches: [main, master]
+    branches: [main]
   workflow_dispatch:
     inputs:
       platform:
@@ -27,7 +27,7 @@ jobs:
   # macOS 构建 (arm64 + x64)
   # ============================================
   build-mac:
-    if: ${{ startsWith(github.ref, 'refs/tags/v') || (github.event_name == 'workflow_dispatch' && (github.event.inputs.platform == 'all' || github.event.inputs.platform == 'mac' || github.event.inputs.platform == '')) }}
+    if: ${{ github.event.inputs.platform == 'all' || github.event.inputs.platform == 'mac' || github.event.inputs.platform == '' }}
     runs-on: macos-latest
     strategy:
       fail-fast: false
@@ -75,7 +75,7 @@ jobs:
   # Windows 构建 (x64)
   # ============================================
   build-windows:
-    if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' || (github.event_name == 'workflow_dispatch' && (github.event.inputs.platform == 'all' || github.event.inputs.platform == 'windows' || github.event.inputs.platform == '')) }}
+    if: ${{ github.event.inputs.platform == 'all' || github.event.inputs.platform == 'windows' || github.event.inputs.platform == '' }}
     runs-on: windows-latest
     steps:
       - name: Checkout
@@ -116,7 +116,7 @@ jobs:
   # Linux 构建 (arm64 + x64)
   # ============================================
   build-linux:
-    if: ${{ startsWith(github.ref, 'refs/tags/v') || (github.event_name == 'workflow_dispatch' && (github.event.inputs.platform == 'all' || github.event.inputs.platform == 'linux' || github.event.inputs.platform == '')) }}
+    if: ${{ github.event.inputs.platform == 'all' || github.event.inputs.platform == 'linux' || github.event.inputs.platform == '' }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
